sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:12: error: not found: value v
      if (a>v) {
            ^AlgInsertionSort:21: error: not found: value v
    setValeur(i-last,v)
                     ^