sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  
  for (i <- 0 to getNombreValeurs()-2) {
    
    var last = 0
    
    for (c <- 0 to i) {
      
      var a = getValeur(i-c)
      
      if (a>v) {
        
        setValeur(i-c+1,a)
        last = c
        
      }
      
    }
    
    setValeur(i-last,v)
    
  }
  
}